[project]
name = "cobra"
version = "0.1.0"
description = "COBRA — Flask + Pydantic API over Supabase Postgres"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "psycopg[binary,pool]>=3.1.0",
    "python-dotenv>=1.0.0",
    # Fyers broker auto-login (TOTP)
    "fyers-apiv3>=3.1.12",
    "pyotp>=2.9.0",
    "requests>=2.31.0",
    # Internal tick scheduler (self-driving cycle after auto-login)
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "auth"]
python_files = "test_*.py"
